# 2021-02-11-sourmash-binary-format

./: Cargo.toml  README.md  shell.nix
.github/workflows/: tests.yml
src/: main.rs
